fix: code highlighting dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind typography;
+
+/* highlighting dark theme. Query-based. https://arc.net/l/quote/zcslsctc */
+@media (prefers-color-scheme: dark) {
+  .shiki,
+  .shiki span {
+    color: var(--shiki-dark) !important;
+    background-color: var(--shiki-dark-bg) !important;
+    /* Optional, if you also want font styles */
+    font-style: var(--shiki-dark-font-style) !important;
+    font-weight: var(--shiki-dark-font-weight) !important;
+    text-decoration: var(--shiki-dark-text-decoration) !important;
+  }
+}
